stDemoOne/force-app/main/default/objects/ApplicationFormRelation/fields/gps_Education_Score__c.field-meta.xml
<CustomField>
    <fullName>gps_Education_Score__c</fullName>
    <label>Education Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>