stDemoOne/force-app/main/default/objects/ApplicationFormRelation/fields/gps_Experience_Score_Explanation__c.field-meta.xml
<CustomField>
    <fullName>gps_Experience_Score_Explanation__c</fullName>
    <label>Experience Score Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>