stDemoOne/force-app/main/default/objects/ApplicationFormRelation/fields/gps_Location_Explanation__c.field-meta.xml
<CustomField>
    <fullName>gps_Location_Explanation__c</fullName>
    <label>Location Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>