stDemoOne/force-app/main/default/objects/ApplicationFormRelation/fields/gps_Skills_Score__c.field-meta.xml
<CustomField>
    <fullName>gps_Skills_Score__c</fullName>
    <label>Skills Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>