stDemoOne/force-app/main/default/objects/ApplicationFormRelation/fields/gps_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>gps_Total_Score__c</fullName>
    <formula>gps_Education_Score__c +  gps_Experience_Score__c +  gps_Skills_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>