stDemoOne/force-app/main/default/objects/ApplicationFormRelation/fields/gps_Valid_Location__c.field-meta.xml
<CustomField>
    <fullName>gps_Valid_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Location</label>
    <type>Checkbox</type>
</CustomField>