stDemoOne/force-app/main/default/objects/ApplicationFormRelation/listViews/All_ApplicationFormRelations.listView-meta.xml
<ListView>
    <fullName>All_ApplicationFormRelations</fullName>
    <filterScope>Everything</filterScope>
    <label>AllApplicationFormRelations</label>
</ListView>